fix toast when a word is too long

--- a/scss/_toast.scss
+++ b/scss/_toast.scss
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     & > div:last-child {
+      word-break: break-word;
       flex: 1;
     }
   }
